split AmmoService into a service and a singleton which manages the network.